components/media.scss
.media {
    .media-img {
        flex-grow: 0;
        flex-shrink: 0;
        flex-basis: auto;
        margin: 0 1em 0 0;
    }

    .media-body {
        flex-grow: 1;
        flex-shrink: 1;
        overflow: auto;
        flex-basis: auto;
        text-align: left;
    }

    &.is-vcentered {
        align-items: center;
    }

    &.is-fullwidth {
        width: 100%;
    }

    &.is-stacked {
        display: block;

        .media-img {
            margin: 0 0 1em 0;
        }
    }

    &.is-reversed .media-img {
        order: 1;
        margin-left: 0;
        margin: 0 0 0 1em;
    }

    @include tablet {
        @include media-states(tablet);
    }

    @include desktop {
        @include media-states(desktop);
    }

    @include widescreen {
        @include media-states(widescreen);
    }

    @include fullhd {
        @include media-states(fullhd);
    }
}

.control {
    .media:not(:last-child) {
        margin-bottom: 2em;
    }
}

